finish item controller

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB="mongodb+srv://Admin:Aa112233@backendtest.xionozq.mongodb.net/test"
+DB="mongodb+srv://Admin:XSikiQQhVgc40ypP@backendtest.xionozq.mongodb.net/test"
 PORT=8080
