--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DB="mongodb+srv://Admin:XSikiQQhVgc40ypP@backendtest.xionozq.mongodb.net/test"
 PORT=8080
+
+JWT_SECRET="the-one-guy-secret"
+JWT_EXPIRES_IN="3d"
